--- a/data_viz_practice.qmd
+++ b/data_viz_practice.qmd
@@ -112,6 +112,16 @@ ggplot(data = lizards, aes(x = total_length, y = weight))+
 
 ```{r}
 
+
+library(tidyverse)
+library(here)
+library(janitor)
+library(patchwork)
+library(ggrepel)
+library(gghighlight)
+library(ggExtra)
+library(ggbeeswarm)
+
 ggplot( data = lizards, aes( x = site, y = weight)) + 
   geom_jitter(aes(color = common_name)) +
   theme_minimal()
@@ -223,9 +233,127 @@ ggplot(data = lizards, aes( y = fct_infreq(common_name))) +
 
 
 
+```
+
+
+
+```{r}
+ggplot(data = lizards, aes(x = total_length, y = weight)) +
+  geom_point() +
+  scale_x_continuous( breaks = seq(from = 0, to = 500, by = 250),
+                       limits = c(0, 500)) +
+  scale_y_continuous(breaks = seq (from = 0, to = 70, by = 10),
+                       limits = c( 0, 70)) +
+                       theme_light()
+                         
+```
+
+
+
+
+```{r}
+lizards_counts <- lizards %>% 
+  mutate(date = lubridate::mdy(date)) %>%
+  count(date)
+
+ggplot(data = lizards_counts, aes(x = date, y = n)) +
+  geom_line() +
+  scale_x_date(breaks = scales::breaks_width("3 years"),
+  labels = scales::breaks_width("2 years"),
+  labels = scales::label_date("'%y")) +
+  labs(x = "Date",
+       y = "Number of Lizards (n)")
+  
+```
+
+
+```{r}
+ggplot(data = lizards, aes(x = total_length, y = weight)) +
+  geom_point(aes(color = total_length)) +
+  scale_color_steps2(low = "green", mid = "white", high = "red", midpoint = 150,
+                     breaks = c(50, 75, 150, 180, 220, 280))
+  #scale_color_steps(low = "red", high = "black") 
+  #scale_color_gradientn(colors = c("orange","red","purple", "navy", "black"))
+  #scale_color_gradient(low = "red", high = "navy")
+
+```
+
+```{r}
+
+library(tidyverse)
+library(here)
+library(janitor)
+library(patchwork)
+library(ggrepel)
+library(gghighlight)
+library(ggExtra)
+library(ggbeeswarm)
+
+
+p <- ggplot(data = lizards, aes(x = total_length, y = weight )) +
+  geom_point()
+
+p + 
+  theme(panel.grid = element_blank)
+#to remove all grids it is element_blank
+
+p <- theme(panel.grid.major.x  = element_blank(), 
+           panel.grid.major.y  = element_line (color = "red"),
+           plot.background = element_rect(fill = "pink"), 
+           text = element_text(size = 12, family = "serif"), 
+           axis.text.x = element_text(color = "blue"), 
+           axis.text.y = element_text(color = "green"), 
+           panel.background = element_rect(color = "purple", fill = "yellow"))  
 
 
 
 
 ```
+
+```{r}
+
+# creates horizontal lines or vertical lines if vline
+
+# Or, have the value be determined based on a variable: 
+p +
+  geom_hline(yintercept = mean(lizards$weight), linetype = "dashed", color = "red") +
+  annotate("text", x = 350, y = mean(lizards$weight) + 2, label = "Mean weight", color = "red")
+```
+
+
+```{r}
+mono <- read_csv(here("data_tidy", "mono.csv"))
+
+ggplot(data = mono, aes(x = year, y = lake_level)) +
+  geom_rect(aes(xmin = 1941, 
+                xmax = 1983, 
+                ymin = 6350, 
+                ymax = 6440), 
+            fill = "gray90") +
+  geom_line() +
+  labs(x = "\nYear",
+       y = "Lake surface level\n(feet above sea level)\n",
+       title = "Mono Lake levels (1850 - 2017)\n",
+       caption = "Data: Mono Basin Clearinghouse") +
+  scale_x_continuous(limits = c(1850, 2020), 
+                     expand = c(0,0),
+                     breaks = seq(1850, 2010, by = 20)) +
+  scale_y_continuous(limits = c(6350, 6440), 
+                     breaks = c(6370, 6400, 6430),
+                     expand = c(0,0), 
+                     labels = scales::label_comma()) +
+  annotate("text", x = 1962, y = 6425, 
+           label = "unrestricted diversions\n(1941 - 1983)",
+           size = 3) +
+  theme_light() +
+  theme(plot.title.position = "plot",
+        axis.text.y = element_text(face = "italic")) +
+  geom_hline(yintercept = 6360, linetype = "dashed") +
+  annotate("text", 
+           x = 1910, 
+           y = 6367, 
+           label = "Decreased shrimp abundance expected\n(6,360 feet above sea level)",
+           size = 3)
+```
+
 
